--- a/JContractInspector/JContractInspector.properties
+++ b/JContractInspector/JContractInspector.properties
@@ -1,6 +1,12 @@
 #no comment
-#Sat Jun 30 15:52:17 EDT 2018
-screenW=1270.0
-screenX=396.0
-screenH=800.0
-screenY=0.0
+#Sun Jul 01 12:44:58 EDT 2018
+inetAddr=
+horiz=0.1899059024807528
+clientId=555
+port=7497
+vert=0.5680933852140078
+screenW=1181.0
+secType=FUT
+screenX=347.0
+screenH=841.0
+screenY=52.0
